2009-10-06  Bruno Haible  <bruno@clisp.org>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix 'compile' script to not call mv when target equals source.
	* lib/compile: Don't attempt to move the generated file to its
	target destination when it is already at the target destination.
	Avoids an mv failure with subdir-objects.
	* tests/ccnoco3.test: New test.
	* tests/Makefile.am: Adjust.

2009-10-01  Stefano Lattarini  <stefano.lattarini@gmail.com>  (tiny change)

	Fix recommended way to run automake's test scripts with Zsh.
	* tests/README (Supported shells): Changed the recommended way
	to run automake's test scripts with Zsh.  Now we tell to use
	the Zsh's command line option `-o no_function_argzero', not
	`--no-function-argzero', since the latter does not work with
	versions 3.x of Zsh.

2009-09-18  Peter Johansson  <trojkan@gmail.com>  (tiny change)

	Fix link to "Recursive Make Considered Harmful" paper.
	* doc/automake.texi (Alternative): Fix broken URL.

2009-09-11  Reuben Thomas <rrt@sc3d.org>  (tiny patch)

	Fix outdated reference to sh-utils in the manual.
	* doc/automake.texi (Options): The reference to `sh-utils'
	should be to `coreutils'.

2009-09-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid sleeping for one second most of the time in sanity check.
	* m4/sanity.m4 (AM_SANITY_CHECK): Try sanity check first without
	sleeping for a second, and only if that failed, sleep and try
	again, to avoid the delay in the common case of a configure
	script that is older than a second, or a system with sub-second
	time stamp granularity.
	Report and different patch by Jim Meyering.

2009-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>  (tiny change)

	tests/README: warn about zsh incompatibilities.
	* tests/README (User interface, Getting details from failures):
	Explicitly state that every test is a "shell script", not just
	a "script", and that it's run by `/bin/sh' by default.
	* tests/README (User interface, Supported shells): New subsection,